--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
 
     container:
 
-      image: kirschbaumdevelopment/laravel-test-runner:7.4
+      image: kirschbaumdevelopment/laravel-test-runner:8.0
 
 
 
@@ -18,7 +18,7 @@ jobs:
 
       mysql:
 
-        image: mysql:5.7
+        image: mysql:latest
 
         env:
 
